// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitRules groups flat styles 1`] = `
Array [
  "
          .foo {
            background-color: red;
            color: blue;
          }",
]
`;

exports[`splitRules splits keyframes 1`] = `
Array [
  "
          .foo {
            background-color: red;
            color: blue;
          }",
  "

          @keyframes rotating {
              from {
                  transform: rotate(0deg);
              }
              to {
                  transform: rotate(360deg);
              }",
]
`;

exports[`splitRules splits media queries selectors 1`] = `
Array [
  "
          .foo {
            background-color: red;
            color: blue;
          }",
  "

          @media (min-width: 768px) {
            .foo { background-color: #deecff; }",
]
`;

exports[`splitRules splits multiple selectors 1`] = `
Array [
  "
        .foo {
          background-color: red;
          color: blue;
        }",
  "

        .foo:hover {
            background-color: green;
            color: green;
          }",
]
`;
